--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ android {
 
 dependencies {
 
+    implementation 'io.github.elye:loaderviewlibrary:3.0.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'androidx.camera:camera-core:1.2.2'
     implementation "androidx.camera:camera-camera2:1.2.2"
